# polars-plugin-option-pricing

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.win  MANIFEST.in  README.md  build-manylinux-wheels.sh  maturin-build-win.sh  pyproject.toml  win.Dockerfile
legacy/: README.md  manylinux.Dockerfile  maturin-build.sh
polars_plugin_option_pricing/: __init__.py
src/: lib.rs
test/: run-bs.ipynb  run-iv.ipynb
wip/wheels/: README.md  polars_plugin_option_pricing-0.1.0-cp310-cp310-win_amd64.whl  polars_plugin_option_pricing-0.1.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  polars_plugin_option_pricing-0.1.0-cp312-cp312-win_amd64.whl  polars_plugin_option_pricing-0.1.0-cp38-abi3-manylinux_2_34_x86_64.whl
wip/wheels/docker/: polars_plugin_option_pricing-0.1.0-cp38-abi3-win_amd64.whl
