[package]
name = "polars-plugin-explo"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.17", features = ["derive", "dtype-struct"] }
polars = { version = "0.43", default-features = false, features = [
    "dtype-struct",
] }
serde = { version = "1", features = ["derive"] }
itertools = { version = "0.13" }
option-pricing = { version = "0.1.4" }

[lib]
# needs to match the name of the function with the `[#pymodule]` attribute
name = "_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]


[profile.release]
strip = true
lto = true
codegen-units = 1
